# pet-project__python

./: .gitignore
backend/: .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  ruff.toml
backend/src/: main.py
