[project]
name = "pet-project-python"
version = "0.1.0"
description = ""
authors = [
    {name = "mamadfar",email = "m.sabah.farhadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "./src/"
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
extend = "./ruff.toml"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
